# mkt

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  e2e_checklist.md  implement_testing_plan.md  package-lock.json  package.json
backend/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  check_output.txt  check_output_utf8.txt  package-lock.json  package.json
backend/abi/: erc20.json  makeit.json  oracle.json  pool.json  swap_adapter.json
backend/local-relay/: local-backend-relay.js
backend/migrations/: 20260401000000_init.sql  20260409000100_processed_events.sql  20260410000200_uint256_numeric.sql  20260410000300_trade_lifecycle_audit.sql
backend/scripts/: db-fresh.js  start.js
backend/src/: main.rs
backend/src/bindings/: mod.rs
backend/src/db/: mod.rs  models.rs
backend/src/lib/: cache.rs  config.rs  mod.rs  utils.rs
backend/src/routes/: mod.rs
backend/src/services/: chain_sync.rs  liquidation_bot.rs  mod.rs  price_sampler.rs  realtime.rs  swap_runner.rs  user_service.rs
e2e/: README.md  full-local-e2e.js
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
local-node/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
local_deploy_rust/: foundry.toml
scenarios/: README.md
scripts/: anvil.js  db-init-rust.js  db-up.js  deploy-all.js  deploy-local.js  dev-rust.js  dev.js  forge.js  frontend-dev.js  install-foundry.js  mysql-up.js  railway-anvil.js  run-backend.js  (+2 more)
(+184 files in other folders)
