[package]
name = "makeit-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
# sqlx 0.7 bundles bigdecimal 0.3 internally — use the same version to avoid type mismatch
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
bigdecimal = { version = "0.3", features = ["serde"] }
ethers = { version = "2.0", features = ["ws", "abigen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
